--- a/SUB/contacto.html
+++ b/SUB/contacto.html
@@ -18,7 +18,7 @@
         <br>
     </div>
     <h2>Contacto</h2>
-    <p>Puedes enviarme tus sugerencias de recetas a mi correo <a href="mailto:sebastiann1@gmail.com">sebastiann1@gmail.com</a></p>
+    <p>Puedes enviarme tus sugerencias de recetas a mi correo <a href="mailto:sebastianxxxx@gmail.com">sebastiann1@gmail.com</a></p>
     
 </body>
 <footer style="background-color:#9896ff; text-align: center;">
